# claudekill

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASING.md
.github/workflows/: ci.yml  release.yml
docs/: DOCUMENTATION.md  code-standards.md  codebase-summary.md  deployment-guide.md  project-overview-pdr.md  project-roadmap.md  system-architecture.md
homebrew/: claudekill.rb
src/: app.rs  config.rs  filter.rs  history.rs  main.rs  project.rs  report.rs  scanner.rs  trash.rs  tui.rs  utils.rs
src/ui/: keybinds.rs  mod.rs  render.rs
