[package]
name = "claudekill"
version = "0.5.1"
edition = "2021"
authors = ["olbboy"]
description = "A high-velocity, terminal-native instrument designed to hunt down and neutralize .claude cache directories."
license = "MIT"
repository = "https://github.com/olbboy/claudekill"
homepage = "https://github.com/olbboy/claudekill"
documentation = "https://github.com/olbboy/claudekill#readme"
readme = "README.md"
keywords = ["cli", "tui", "claude", "cleanup", "disk-space"]
categories = ["command-line-utilities"]
exclude = [".github/*", "plans/*", ".claude/*"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Directory scanning
jwalk = "0.8"

# Trash
trash = "5"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Utilities
dirs = "6.0"
anyhow = "1.0"

# Configuration
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
